--- a/src/app.scss
+++ b/src/app.scss
@@ -137,7 +137,7 @@ button {
   background: none;
   border: 1px solid;
   border-radius: 2em;
-  padding: 0.5em;
+  padding: 0.5em 0.75em;
 }
 
 svg {
