--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@
   --dark: black;
   --light: white;
   --muted: rgba(0, 0, 0, 0.25);
+  --grey: #C2C2C2;
   --highlight: currentColor;
   
   --bleu: #2F73D9;
