--- a/src/app.scss
+++ b/src/app.scss
@@ -12,6 +12,7 @@
   --light: white;
   --muted: rgba(0, 0, 0, 0.25);
   --grey: #C2C2C2;
+  --dark-grey: #696969;
   --highlight: currentColor;
   
   --bleu: #2F73D9;
@@ -205,7 +206,7 @@ svg {
   }
 
   .flex__seventh {
-    width: (100% / 7);
+    width: calc(100% / 7);
   }
 }
 
