--- a/src/app.scss
+++ b/src/app.scss
@@ -11,7 +11,7 @@
   --dark: black;
   --light: white;
   --muted: rgba(0, 0, 0, 0.25);
-  --grey: #C2C2C2;
+  --grey: #A8A8A8;
   --dark-grey: #696969;
   --highlight: currentColor;
   
