--- a/src/app.scss
+++ b/src/app.scss
@@ -44,6 +44,10 @@ html {
   -webkit-tap-highlight-color: var(--muted);
   -webkit-scroll-behavior: smooth;
   scroll-behavior: smooth;
+
+  @media (max-width: 888px) {
+    font-size: 14px;
+  }
 }
 
 html.noscroll {
@@ -57,6 +61,10 @@ body {
 
 main {
   min-height: 100vh;
+
+  @media (max-width: 888px) {
+    margin-top: 6rem;
+  }
 }
 
 @mixin text($size, $lh, $ls: 0) {
