--- a/src/app.scss
+++ b/src/app.scss
@@ -185,6 +185,11 @@ a.button {
   transition: border-radius 666ms;
   padding: 0.5em 0.75em;
 
+  &.button--tight {
+    padding: 0.25em 0.66em;
+    border-radius: 1em;
+  }
+
   &:hover,
   &:focus {
     border-radius: 0;
