--- a/src/app.scss
+++ b/src/app.scss
@@ -169,7 +169,8 @@ a {
 }
 
 button,
-a.button {
+a.button,
+span.button {
   display: inline-flex;
   align-items: center;
   font-family: var(--bodyfont);
